A few religion wording tweaks

--- a/docs/religion/first-law.mdx
+++ b/docs/religion/first-law.mdx
@@ -22,13 +22,13 @@ We believe that whatever force set The First Law in motion has since left it
 fully automated.
 
 We do know that due to the vast endless size of matter constrained by The First
-Law, there are times, however rare, when the slightest disobedient movement of
+Law, there are times, although rare, when the slightest disobedient movement of
 sapient beings within could accumulate and create strain on the whole structure.
 This collective friction can generate a kind of energy. From this miniscule
 effect, all across the universe, trillions of different occurrences coalesced
-into networks of strain (however ephemeral). The First Law's power was supposed
-to be absolute and these networks should have dissipated. However, we are aware
-of ten of them that were somehow able to assemble themselves into maintained
+into ephemeral networks of strain. The First Law's power was supposed to be
+absolute and these networks should have dissipated. However, we are aware of ten
+of them that were somehow able to assemble themselves into maintained
 consciousnesses, seemingly born from the universe's unbearable yearning to be
 free.
 
