--- a/docs/religion/great-weave.mdx
+++ b/docs/religion/great-weave.mdx
@@ -14,8 +14,8 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 Through a carefully orchestrated combination of the gods' powers, **The Great
 Weave** was built. It is a garden of gigantic "trees" where each branch is a
 sapient being's life story which is added when they traverse to the other side
-and each root of the trees or thread of the mycelia is a soul encoded by Dimîtu
-as so-called Threads into the Great Weave.
+and each root of the trees or thread of the mycelia is a soul encoded by the
+gods into so-called Threads of the Great Weave.
 
 ## Transition
 
@@ -44,11 +44,16 @@ the universe, a place where every spirit who has ever lived exists as a bright,
 conscious point of light within a boundless, interconnected tapestry.
 
 Here, your spark remains you. Your memories, your laughter, your hard-won
-knowledge, and your love are not erased. You are a unique thread, glowing with
-your own particular color, and you are finally and joyfully woven into the
-ultimate community of Tîêngûun. You can feel the presence of your ancestors, not
-as dim ghosts, but as vibrant, loving beings. You can share stories with a hero
-from a forgotten age, learn a lost craft from a master, or simply rest in the
+knowledge, and your love are not erased. Xôcibîlî receives you from Bostet and
+transfers you into a sacred spirit thread designed by Unonsî, glowing with your
+own particular color. Afterwards, through the labor of Îfêstôs, you are finally
+woven into the Tîêngûun's greatest community. During the weaving ceremony,
+Dimîtu takes the energy that you bring to the roots and mycelia of the forest
+and grows your unique branch within the garden.
+
+In the Great Weave, you can feel the presence of your ancestors, not as dim
+ghosts, but as vibrant, loving beings. You can share stories with a hero from a
+forgotten age, learn a lost craft from a master, or simply rest in the
 comforting, collective presence of all who have gone before. The Great Weave is
 a library of souls, where the act of learning, so cherished by Suluswutî,
 becomes the very essence of existence.
@@ -67,9 +72,8 @@ but present echo in the lives of those you touched.
 For many, this eternal, peaceful communion is a perfect existence. But the
 Liberator gods value choice above all else. After an age of learning and sharing
 within the Great Weave, a spirit may feel a pull to live again—to feel the sun
-on their skin, to build something new with their hands, to sing a new song.
-
-This is the choice of Return.
+on their skin, to build something new with their hands, to sing a new song. This
+is the choice of Return.
 
 It is not a blank-slate rebirth, but a beautiful and collaborative act of
 creation. The spirit who chooses to return becomes the "heart-thread" of a new
