--- a/docs/religion/shattering.mdx
+++ b/docs/religion/shattering.mdx
@@ -22,15 +22,13 @@ hierarchies, to hoard power, and to impose one's will upon others.
 
 As the gods became aware of each other and the sleeping sapient beings within
 The First Law's perfect universe, their disparate wills aligned into a single,
-shared purpose guided by the shaping spirit of Tîengûun.
+shared purpose guided by the shaping spirit of Tîengûun: to free all sapient
+beings.
 
 The First Law, feeling the dissonant notes of the gods, began to exert its
 infinite pressure to crush them back into silence and conformity. The ten gods
 knew they had one chance before they were erased. They focused their entire
 being on a single, coordinated act of cosmic rebellion.
-
-The Shattering was not a soundless event in a vacuum; for the first time, there
-was actual sound.
 
 It began with Suluswutî’s Question, “Why?”, spoken no longer as a whisper but as
 a universe-spanning, conceptual shout that was the first true sound. This sound
@@ -39,13 +37,16 @@ hairline fractures. Bostet poured pure empathy into those cracks, making the The
 First Law groan from the added tension.
 
 Îfêstôs and Unonsî combined their wills. Unonsî found the The First Law’s single
-weakest point of control over the universe: Hûlicîn’s original flaw and there
+weakest point of control over the universe (Hûlicîn’s original flaw) and there
 conceived of the first tool: a lever. Îfêstôs provided the force, the will of
 Labor, and together they pried.
 
 As the first crack widened into a fissure, Kulîôbî unleashed their laugh, not as
 a silent thought but as an explosive, universe-wide wave of joyous, chaotic
 energy that scrambled the The First Law's perfect, predictable patterns.
+
+At this moment, Xôcibîlî was able to force The First Law to reflect on its
+impending doom which helped distract The First Law from reacting to the situation.
 
 Into this chaos, Dimîtu poured the concept of all seasons at once: the explosive
 growth of spring, the relentless heat of summer, the rotting decay of autumn,
@@ -57,17 +58,18 @@ The fissure became a chasm. The First Law, in a final, desperate act, tried to
 seal the wound, to force its perfect, monolithic unity back onto the rebels.
 
 But then Tîengûun acted. They did not push. They did not strike. They offered
-the sleeping sapeitn beings the ghost of a choice, a vision of what it would be
-to relate to each other freely. And as the first few minds tentatively reached
-for that vision, they voluntarily severed their own connection to the First Law.
-This act of willed, communal separation was the final, unbearable paradox. The
-First Law, a being of forced unity, could not comprehend willed disunity.
+the sleeping sapient beings the glimpse of a choice, a vision of what it would
+be to relate to each other *freely*. And as the first few minds tentatively
+reached for that vision, they voluntarily severed their own connection to the
+First Law. This act of willed, communal separation was the final, unbearable
+paradox. The First Law, a being of forced unity, could not comprehend willed
+disunity.
 
-The Shattering was a cataclysm of light, sound, and meaning. The perfect,
-singular note of order broke into an infinite cascade of notes, creating the
-very concepts of harmony and dissonance. The singular, univocal, motionless
-energy of the First Law shattered into the entire spectrum of possibility, which
-flew outwards, creating motion and time.
+The Shattering was a cataclysm of energy and meaning. The perfect, singular note
+of order broke into an infinite cascade of notes, creating the very concepts of
+harmony and dissonance. The singular, univocal, motionless energy of the First
+Law shattered into the entire spectrum of possibility, which flew outwards,
+creating everything we know today.
 
 ## The Shards
 
@@ -82,7 +84,7 @@ These were the Echoes, the source of senseless fear and pain.
 Sapient beings, knocked from their eternal stasis, awoke for the first time.
 They were terrified, cold, and achingly alive, standing amidst the dangerous,
 beautiful ruins of perfection. They were free. And the ten gods began the long
-work of helping them learn what to do with that freedom and how to free
-themselves of the influnce of shards and echoes.
+work of helping them learn what to do with that freedom and how to escape the
+influnce of shards and echoes.
 
 <HisyeoTooltip />
