--- a/docs/lessons/religion.mdx
+++ b/docs/lessons/religion.mdx
@@ -38,7 +38,7 @@ communities, practice mutual aid, and actively resist the lingering fragments of
 hierarchy and control, known as the "Shards of the First Law." Upon death,
 spirits are not judged but join a collective spiritual existence called the
 Great Weave, where they can remain in community with all who have ever lived or
-may choose to be born anew into the world.
+they may even choose to be born anew into the world.
 
 
 ### Terminology
