fix word usages

--- a/docs/language/word_types/nouns.mdx
+++ b/docs/language/word_types/nouns.mdx
@@ -316,7 +316,7 @@ proper way to formulate the desired semantic meaning.
   <p>nîo bêûdo oxon cêo yê mulô êto.&emsp;<em>He's going for his doctorate.</em></p>
   <p>nîmû fôlun xe li nô oxon îskô ûlzo ko.&emsp;<em>xe you want to go for coffee?</em></p>
   <p>umo xe niwos hoî môî boxô yê kûôcyo Elofo, dîyondê sî umo Delfi oxon zuwobû.&emsp;<em>People all over Greece looked to Delphi for answers.</em></p>
-  <p>nîmû kôî li nô mût gufuyo oxon yoûtî hûwu ko.&emsp;<em>Can you go to the store for some eggs?</em></p>
+  <p>nîmû kôî li nô mût gubuyo oxon yoûtî hûwu ko.&emsp;<em>Can you go to the store for some eggs?</em></p>
   <p>noyo wêko munî bi sôbo oxon oûtô.&emsp;<em>I'm saving up for a car.</em></p>
   <p>kûu motsi yôk oxon zuwobû.&emsp;<em>Don't wait for an answer.</em></p>
   <p>nîo sôlû mût nîmû oxon zik.&emsp;<em>What did he ask you for?</em></p>
@@ -511,10 +511,10 @@ either specified by this noun phrase or is reached when the destination
 specified is reached.
 
 <HisyeoTabs>
-    <p>noyo li nô mût gufuyo hoî suhot tukwos yê bitûn xobêk.&emsp;<em>"I was going to the market at 8 o'clock last night."</em></p>
-    <p>noyo li nô mût gufuyo lon suhot tukwos hoî bitûn xobêk.&emsp;<em>"I was going to the market until 8 o'clock last night."</em></p>
-    <p>nîo bi fîkî li nô mût gîto kônyêc lon xe dêko sî gufuyo cûtî yê îskô yê kûôxi nomû mûncû.&emsp;<em>"He was running to the finish line until he saw the lemonade stand."</em></p>
-    <p>nîo bi fîkî li nô mût gîto kônyêc hoî xe dêko sî gufuyo cûtî yê îskô yê kûôxi nomû mûncû.&emsp;<em>"He was running to the finish line at the time he saw the lemonade stand."</em></p>
+    <p>noyo li nô mût gubuyo hoî suhot tukwos yê bitûn xobêk.&emsp;<em>"I was going to the market at 8 o'clock last night."</em></p>
+    <p>noyo li nô mût gubuyo lon suhot tukwos hoî bitûn xobêk.&emsp;<em>"I was going to the market until 8 o'clock last night."</em></p>
+    <p>nîo bi fîkî li nô mût gîto kônyêc lon xe dêko sî gubuyo cûtî yê îskô yê kûôxi nomû mûncû.&emsp;<em>"He was running to the finish line until he saw the lemonade stand."</em></p>
+    <p>nîo bi fîkî li nô mût gîto kônyêc hoî xe dêko sî gubuyo cûtî yê îskô yê kûôxi nomû mûncû.&emsp;<em>"He was running to the finish line at the time he saw the lemonade stand."</em></p>
 </HisyeoTabs>
 
 To better understand why it's necessary to distinguish this from location/time,
@@ -1290,7 +1290,7 @@ description of the **direct object** as a relative clause.
 
 <HisyeoTabs>
     <p>bi fos bi ubênus wuîtsî xe ogolol, noyo lunsol sî gundolê nubuso yê zomo onô bi len sumon en fos noyo kôî tûu.&emsp;<em>"Barely keeping a grip on it, I throw the dog's wet ball as hard as I can."</em></p>
-    <p>bi fos unon îskô cûbû ûn bîek sûn, nûs dênêmêk xe yosten gufuyo kon îskô onô hoî sinsî cûtî onô.&emsp;<em>"Smelling of beer and bread, we searched the small town for the local tavern."</em></p>
+    <p>bi fos unon îskô cûbû ûn bîek sûn, nûs dênêmêk xe yosten gubuyo kon îskô onô hoî sinsî cûtî onô.&emsp;<em>"Smelling of beer and bread, we searched the small town for the local tavern."</em></p>
     <p>bi xe sityo hoî môtô onô, li zowo xe tô hokôlî ogolol sî siskin wohî nîmû.&emsp;<em>"Sitting by the fire was the dog that bit your sister."</em></p>
 </HisyeoTabs>
 
