--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -169,7 +169,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>niwos cûtî yûnyoû sî niswî kûncîen xe li kûncîen kon sityo li kûncîen kon conzodo li kûncîen kon côûfon yê cûtî êto.&emsp;<em>The little house had three rooms, a sitting room, a bedroom, and a tiny kitchen.</em></p>
 <p>nûs monodo sî sinsî cûtî yê siskin moskûl yê motûo noyo et xe li sinsî cûtî yê cênbô môî en nucoto.&emsp;<em>We visited my uncle's village, the largest village in the world.</em></p>
 <p>nûs bêûdo fin nêôs hoî xokôn lono.&emsp;<em>We learn something new each day.</em></p>
-<p>socok gufuyo onô hoî tîû êfun yê hêlxun eswen hôn wêxôn ôfo.&emsp;<em>The market begins five minutes earlier this week.</em></p>
+<p>socok gubuyo onô hoî tîû êfun yê hêlxun eswen hôn wêxôn ôfo.&emsp;<em>The market begins five minutes earlier this week.</em></p>
 <p>nîmû yosten sî odigon cênbô yê mônbili ko.&emsp;<em>Did you find the distance too great?</em></p>
 <p>kûu li fîkî noî umo xonluk.&emsp;<em>Hurry, children.</em></p>
 <p>noî umo wohî xêntîl û noyo ke fûtsûn hûkun nîmû.&emsp;<em>Madam, I will obey your command.</em></p>
