--- a/docs/language/sentences.mdx
+++ b/docs/language/sentences.mdx
@@ -184,7 +184,7 @@ clauses. These clauses are joined together using conjunctions.
     <p>nîo îskô sî yoûtî xîmu lêkin bi môcîbo fôlun xe îskô eswen.&emsp;<em>He drank some water but was still thirsty.</em></p>
     <p>nîo li sî gîk hoî niwos nîo ûn li sî conzodo.&emsp;<em>She got home and went to sleep.</em></p>
     <p>li bôkbûn bînê nîo wuîtsî cizî hoî sokofû sêl onô.&emsp;<em>It was storming so he stayed in the basement.</em></p>
-    <p>nûs kôî li nô mût gufuyo kon mokon yodo û nûs kôî côûfon hoî niwos nûs.&emsp;<em>We can go to the restuarant or make dinner at home.</em></p>
+    <p>nûs kôî li nô mût gubuyo kon mokon yodo û nûs kôî côûfon hoî niwos nûs.&emsp;<em>We can go to the restuarant or make dinner at home.</em></p>
 </HisyeoTabs>
 
 ### Complex
