Add more Mini translations

--- a/docs/works/mini-words.mdx
+++ b/docs/works/mini-words.mdx
@@ -1172,11 +1172,11 @@ common compounds that are used in day-to-day speech.
     <p>lîsmu&emsp;<strong>soli²:</strong> <em>clay</em></p>
     <p>cîes&emsp;<strong>solidi:</strong> <em>solid, firm</em></p>
     <p>tôlkî&emsp;<strong>solo:</strong> <em>single, alone, only</em></p>
-<p>TBD&emsp;<strong>solu¹:</strong> <em>solve</em></p>
-<p>TBD&emsp;<strong>solu²:</strong> <em>solution</em></p>
-<p>TBD&emsp;<strong>solu¹:</strong> <em>loose</em></p>
-<p>TBD&emsp;<strong>solu²:</strong> <em>untie</em></p>
-<p>TBD&emsp;<strong>solu³:</strong> <em>dissolve</em></p>
+    <p>xe yosten zuwobû&emsp;<strong>solu¹:</strong> <em>solve</em></p>
+    <p>zuwobû în yosten&emsp;<strong>solu²:</strong> <em>solution</em></p>
+    <p>sodilû&emsp;<strong>solu³:</strong> <em>loose</em></p>
+    <p>hôdôkû&emsp;<strong>solu⁴:</strong> <em>untie</em></p>
+    <p>xe li êo hûunhu&emsp;<strong>solu⁵:</strong> <em>dissolve</em></p>
     <p>fenûo ûsên tût&emsp;<strong>soma:</strong> <em>summer</em></p>
     <p>yoûtî&emsp;<strong>some:</strong> <em>some, few, an indefinite amount, somewhat</em></p>
     <p>hôlmo&emsp;<strong>sonjo:</strong> <em>dream</em></p>
