Fix misspelled Hîsyêô word in Mini dictionary

--- a/docs/works/mini-words.mdx
+++ b/docs/works/mini-words.mdx
@@ -730,9 +730,9 @@ common compounds that are used in day-to-day speech.
     <p>tûu dondun&emsp;<strong>more:</strong> <em>custom, habit, tradition</em></p>
     <p>dondun&emsp;<strong>more:</strong> <em>customary, traditional</em></p>
     <p>kon tîkû&emsp;<strong>mori¹:</strong> <em>death</em></p>
-    <p>dî tikû&emsp;<strong>mori²:</strong> <em>die</em></p>
+    <p>dî tîkû&emsp;<strong>mori²:</strong> <em>die</em></p>
     <p>tîkû&emsp;<strong>mori³:</strong> <em>dead</em></p>
-    <p>li êo tikû&emsp;<strong>mori⁴:</strong> <em>kill</em></p>
+    <p>li êo tîkû&emsp;<strong>mori⁴:</strong> <em>kill</em></p>
     <p>lozîdô yê culono&emsp;<strong>moto:</strong> <em>motor, engine</em></p>
     <p>xe li nô&emsp;<strong>move¹:</strong> <em>move</em></p>
     <p>nô&emsp;<strong>move²:</strong> <em>movement, motion</em></p>
