add more mini translations and fix some grammar

--- a/docs/works/mini-words.mdx
+++ b/docs/works/mini-words.mdx
@@ -40,8 +40,9 @@ common compounds that are used in day-to-day speech.
 <HisyeoTabs>
     <p>nulûhu&emsp;<strong>abuso:</strong> <em>abuse, violate, rape, assault, abusive</em></p>
     <p>yoldûn&emsp;<strong>ade:</strong> <em>aid, care, concern, help, care for</em></p>
-    <p>bilît&emsp;<strong>adere¹:</strong> <em>adhere, stick, cling, sticky</em></p>
-    <p>mozûn bilît&emsp;<strong>adere²:</strong> <em>glue</em></p>
+    <p>xe li bilît&emsp;<strong>adere¹:</strong> <em>adhere, stick, cling</em></p>
+    <p>bilît&emsp;<strong>adere²:</strong> <em>sticky</em></p>
+    <p>mozûn bilît&emsp;<strong>adere³:</strong> <em>glue</em></p>
     <p>bêîku în ogolol ônî cûfo&emsp;<strong>aeji:</strong> <em>shield</em></p>
     <p>bêîku în ôntôn ônî cûfo&emsp;<strong>aeji:</strong> <em>armor</em></p>
     <p>woyû&emsp;<strong>aero¹:</strong> <em>air</em></p>
@@ -53,33 +54,44 @@ common compounds that are used in day-to-day speech.
     <p>xe dî nokdo&emsp;<strong>aje²:</strong> <em>to age</em></p>
     <p>wokût sônsûs&emsp;<strong>aje³:</strong> <em>eon</em></p>
     <p>yôcno&emsp;<strong>ajenda:</strong> <em>program, agenda, plan, computer program</em></p>
-    <p>ônî wêtû&emsp;<strong>ake¹:</strong> <em>ax, hatchet, machete</em></p>
-    <p>wêtû&emsp;<strong>ake²:</strong> <em>to chop</em></p>
+    <p>yôn ônî wêtû&emsp;<strong>ake¹:</strong> <em>ax, hatchet, machete</em></p>
+    <p>xe wêtû&emsp;<strong>ake²:</strong> <em>to chop</em></p>
     <p>tômôs kon sobis&emsp;<strong>akonto:</strong> <em>account, ledger, report</em></p>
-<p>TBD&emsp;<strong>akonto:</strong> <em>to recount</em></p>
-    <p>cîtsê&emsp;<strong>akuse:</strong> <em>accuse, accusation, charge (legal)</em></p>
+    <p>kîso&emsp;<strong>akonto:</strong> <em>to recount</em></p>
+    <p>cîtsê&emsp;<strong>akuse¹:</strong> <em>accuse</em></p>
+    <p>kon cîtsê&emsp;<strong>akuse²:</strong> <em>accusation, charge (legal)</em></p>
     <p>kêskîn&emsp;<strong>akuta:</strong> <em>sharp, acute, keen</em></p>
     <p>bolutê&emsp;<strong>alien:</strong> <em>foreign, alien</em></p>
 <p>TBD&emsp;<strong>alio:</strong> <em>garlic</em></p>
-    <p>ôzîl nonto&emsp;<strong>amidala:</strong> <em>almond, tonsil, amygdala</em></p>
+    <p>ôzîl nonto&emsp;<strong>amidala¹:</strong> <em>almond</em></p>
+    <p>kukwon nonto yê gôyu&emsp;<strong>amidala²:</strong> <em>tonsil</em></p>
+    <p>kukwon nonto yê dûuncît&emsp;<strong>amidala³:</strong> <em>amygdala</em></p>
     <p>sûtûô&emsp;<strong>amigo¹:</strong> <em>friend, acquaintance, friendly</em></p>
     <p>xe kôs sûtûô&emsp;<strong>amigo²:</strong> <em>befriend</em></p>
     <p>lîûbît&emsp;<strong>amo¹:</strong> <em>love</em></p>
     <p>cômêl&emsp;<strong>amo²:</strong> <em>dear</em></p>
-    <p>xe êo sunyotnî&emsp;<strong>amuse¹:</strong> <em>amuse, entertain, entertainment</em></p>
+    <p>xe li êo sunyotnî&emsp;<strong>amuse¹:</strong> <em>amuse, entertain, entertainment</em></p>
     <p>fûnlôk&emsp;<strong>amuse²:</strong> <em>fun</em></p>
     <p>ozûul&emsp;<strong>ani:</strong> <em>any (determiner), whichever, anyone</em></p>
     <p>lûok&emsp;<strong>anima:</strong> <em>soul, spirit</em></p>
     <p>ônî hobîyô yê sêmoi&emsp;<strong>anjo:</strong> <em>angel, angelic</em></p>
-<p>TBD&emsp;<strong>ankora:</strong> <em>yet, even, still</em></p>
+    <p>ilik îbûdû&emsp;<strong>ankora¹:</strong> <em>yet, still</em></p>
+    <p>lôîcôk&emsp;<strong>ankora²:</strong> <em>even</em></p>
     <p>ûsên&emsp;<strong>ano:</strong> <em>year, annual</em></p>
     <p>cînzon&emsp;<strong>ansio:</strong> <em>anxious, anxiety, nervous</em></p>
-    <p>dên&emsp;<strong>anti:</strong> <em>against, anti-, opposite, opposing, oppose</em></p>
-    <p>osyen&emsp;<strong>antika¹:</strong> <em>old, antique, ancient</em></p>
-    <p>xe êo osyen&emsp;<strong>antika²:</strong> <em>to age</em></p>
+    <p>dên&emsp;<strong>anti¹:</strong> <em>against</em></p>
+    <p>kon kôntêsto&emsp;<strong>anti²:</strong> <em>anti-, opposing</em></p>
+    <p>elentêt&emsp;<strong>anti³:</strong> <em>opposite</em></p>
+    <p>xe kôntêsto&emsp;<strong>anti⁴:</strong> <em>oppose</em></p>
+    <p>nokdo&emsp;<strong>antika¹:</strong> <em>old</em></p>
+    <p>osyen&emsp;<strong>antika²:</strong> <em>antique, ancient</em></p>
+    <p>xe li êo osyen&emsp;<strong>antika³:</strong> <em>to age</em></p>
     <p>hobîyô&emsp;<strong>anunsi:</strong> <em>announce, announcement, declare, declaration</em></p>
     <p>xoînbo&emsp;<strong>apara:</strong> <em>seem, appear, apparent, appearance</em></p>
-<p>TBD&emsp;<strong>apojo:</strong> <em>support, backing, advocacy, backup, bolster</em></p>
+    <p>yoldûn&emsp;<strong>apojo¹:</strong> <em>support, backing</em></p>
+    <p>yoldûn xe oxon umo yodo uyo&emsp;<strong>apojo²:</strong> <em>advocacy</em></p>
+    <p>yoldûn fos oxon mûun eswen okôt&emsp;<strong>apojo³:</strong> <em>backup</em></p>
+    <p>xe li êo len eswen&emsp;<strong>apojo⁴:</strong> <em>bolster</em></p>
     <p>mûxî mîtmo xîkô yê fecko côt sûît&emsp;<strong>ara¹:</strong> <em>bee</em></p>
     <p>mûxî xîkô yê kômû ônî dûngo ogogê&emsp;<strong>ara²:</strong> <em>hornet, wasp</em></p>
     <p>buyencok&emsp;<strong>arana:</strong> <em>spider, arachnid</em></p>
@@ -202,7 +214,7 @@ common compounds that are used in day-to-day speech.
     <p>cûfo&emsp;<strong>defende¹:</strong> <em>defend, guard, protect</em></p>
     <p>kon cûfo&emsp;<strong>defende²:</strong> <em>protection, defense</em></p>
     <p>golfon&emsp;<strong>degu¹:</strong> <em>disgust, disgusting, revulsion</em></p>
-    <p>êo sobûnî&emsp;<strong>degu²:</strong> <em>sicken</em></p>
+    <p>xe li êo sobûnî&emsp;<strong>degu²:</strong> <em>sicken</em></p>
     <p>xobêk / ôhêl&emsp;<strong>deja:</strong> <em>already, by now/then</em></p>
     <p>moxo&emsp;<strong>dekora:</strong> <em>decorate, ornamentation, adorn, fancy</em></p>
     <p>obûlû&emsp;<strong>deluje:</strong> <em>flood, torrent, inundate, overwhelm, overwhelming</em></p>
@@ -214,8 +226,9 @@ common compounds that are used in day-to-day speech.
     <p>gôcîdon&emsp;<strong>deside¹:</strong> <em>decide</em></p>
     <p>kon gôcîdon&emsp;<strong>deside²:</strong> <em>decision</em></p>
     <p>tûlokon&emsp;<strong>deside³:</strong> <em>adjudicate, resolve, settle</em></p>
-    <p>êo yôcno&emsp;<strong>desini¹:</strong> <em>design, sketch, blueprint</em></p>
-    <p>lexetko ogogê&emsp;<strong>desini²:</strong> <em>pattern</em></p>
+    <p>xe kôs yôcno&emsp;<strong>desini¹:</strong> <em>design, blueprint</em></p>
+    <p>xe toswîl yôcno&emsp;<strong>desini²:</strong> <em>sketch</em></p>
+    <p>lexetko ogogê&emsp;<strong>desini³:</strong> <em>pattern</em></p>
     <p>dêtoî&emsp;<strong>detali:</strong> <em>detail, detailed, meticulous</em></p>
     <p>yosten&emsp;<strong>deteki¹:</strong> <em>find, discovery</em></p>
     <p>zûyi&emsp;<strong>deteki²:</strong> <em>detect, notice</em></p>
@@ -280,7 +293,8 @@ common compounds that are used in day-to-day speech.
     <p>bîômu&emsp;<strong>environ:</strong> <em>environment, habitat, ambient, milieu</em></p>
     <p>kotonhon&emsp;<strong>epigo¹:</strong> <em>emergency, urgent</em></p>
     <p>hofo&emsp;<strong>epigo²:</strong> <em>to urge, press for</em></p>
-    <p>êo fonmot&emsp;<strong>erase:</strong> <em>erase, erasure, remove, wipe away</em></p>
+    <p>xe li êo fonmot&emsp;<strong>erase¹:</strong> <em>erase, remove, wipe away</em></p>
+    <p>kon êo fonmot&emsp;<strong>erase²:</strong> <em>erasure</em></p>
     <p>totsi&emsp;<strong>ereki:</strong> <em>to stand, upright, erect</em></p>
     <p>foût&emsp;<strong>ero:</strong> <em>error, mistake, err</em></p>
     <p>dênêmêk&emsp;<strong>esamin¹:</strong> <em>test</em></p>
@@ -303,7 +317,7 @@ common compounds that are used in day-to-day speech.
     <p>mônbili&emsp;<strong>fara:</strong> <em>far, distance, remote, extreme</em></p>
     <p>bôlfêlê kûkmut&emsp;<strong>farina¹:</strong> <em>flour</em></p>
     <p>bôlfêlê&emsp;<strong>farina²:</strong> <em>dust, a granulated substance, sand</em></p>
-    <p>êo bôlfêlê&emsp;<strong>farina³:</strong> <em>grind</em></p>
+    <p>xe kôs bôlfêlê&emsp;<strong>farina³:</strong> <em>grind</em></p>
     <p>ênkômôn&emsp;<strong>fase¹:</strong> <em>face</em></p>
     <p>bono&emsp;<strong>fase²:</strong> <em>to face someone</em></p>
     <p>obunyun&emsp;<strong>fasile¹:</strong> <em>easy, ease</em></p>
@@ -359,7 +373,7 @@ common compounds that are used in day-to-day speech.
     <p>dûngo bûmî&emsp;<strong>fura²:</strong> <em>to drill, bore</em></p>
     <p>gûso&emsp;<strong>furi:</strong> <em>anger, angry</em></p>
     <p>mûncotî&emsp;<strong>fusi¹:</strong> <em>pour</em></p>
-    <p>êo gôlûo&emsp;<strong>fusi²:</strong> <em>fuse, fusion</em></p>
+    <p>xe li êo gôlûo&emsp;<strong>fusi²:</strong> <em>fuse, fusion</em></p>
     <p>gôlûo&emsp;<strong>fusi³:</strong> <em>melt</em></p>
     <p>boxô gos&emsp;<strong>gaden¹:</strong> <em>garden</em></p>
     <p>comen fîmôsyôs&emsp;<strong>gaden²:</strong> <em>a park</em></p>
@@ -408,7 +422,7 @@ common compounds that are used in day-to-day speech.
     <p>xûxok&emsp;<strong>infero:</strong> <em>hell, to damn, hellish</em></p>
     <p>sônsûs&emsp;<strong>infiniti:</strong> <em>infinity, infinite</em></p>
     <p>fisun&emsp;<strong>info¹:</strong> <em>information</em></p>
-    <p>êo fisun&emsp;<strong>info²:</strong> <em>inform</em></p>
+    <p>xe fisun êo&emsp;<strong>info²:</strong> <em>inform</em></p>
     <p>foko fisun&emsp;<strong>info³:</strong> <em>informative</em></p>
     <p>gûlû&emsp;<strong>inja:</strong> <em>wound, injure, injury</em></p>
     <p>mûxi&emsp;<strong>inseto:</strong> <em>insect, bug</em></p>
@@ -520,7 +534,7 @@ common compounds that are used in day-to-day speech.
     <p>cok&emsp;<strong>kite:</strong> <em>leave, quit, abandon, exit</em></p>
     <p>bûntût&emsp;<strong>koda:</strong> <em>tail, coda</em></p>
     <p>yôcno&emsp;<strong>kode:</strong> <em>code, cipher, program code</em></p>
-    <p>êo zomo&emsp;<strong>koleki¹:</strong> <em>collect, gather</em></p>
+    <p>xe li êo zomo&emsp;<strong>koleki¹:</strong> <em>collect, gather</em></p>
     <p>zomo&emsp;<strong>koleki²:</strong> <em>collection</em></p>
     <p>zûntûlu gonbu&emsp;<strong>kolenka:</strong> <em>knee</em></p>
     <p>cûndôl&emsp;<strong>kolidi:</strong> <em>crash, collision, collide</em></p>
@@ -547,7 +561,7 @@ common compounds that are used in day-to-day speech.
     <p>lîonxîn&emsp;<strong>konsiense¹:</strong> <em>conscience</em></p>
     <p>kôxentê&emsp;<strong>konsiense²:</strong> <em>awareness, conscious, consciousness</em></p>
     <p>xolu&emsp;<strong>kopa:</strong> <em>cup, drinking vessel, chalice</em></p>
-    <p>êo kôlmûdul&emsp;<strong>kopen¹:</strong> <em>buy</em></p>
+    <p>xe li êo kôlmûdul&emsp;<strong>kopen¹:</strong> <em>buy</em></p>
     <p>kôlmûdul&emsp;<strong>kopen²:</strong> <em>a purchase</em></p>
     <p>ûlôgun yê bûlo hûnsik&emsp;<strong>kopere:</strong> <em>copper</em></p>
     <p>kûncîen kon ûnîdû&emsp;<strong>koredora:</strong> <em>hall, corridor</em></p>
@@ -585,7 +599,7 @@ common compounds that are used in day-to-day speech.
     <p>kôs nonto&emsp;<strong>lagima²:</strong> <em>to cry</em></p>
     <p>zomo xîmu&emsp;<strong>lago:</strong> <em>lake, loch, pond</em></p>
     <p>hûlodêk&emsp;<strong>laji¹:</strong> <em>trash, garbage, waste</em></p>
-    <p>dî êo hûlodêk&emsp;<strong>laji²:</strong> <em>to throw away</em></p>
+    <p>xe dî êo hûlodêk&emsp;<strong>laji²:</strong> <em>to throw away</em></p>
     <p>gosîl&emsp;<strong>lakoni¹:</strong> <em>short (length)</em></p>
     <p>yoûtî lolû&emsp;<strong>lakoni²:</strong> <em>curt</em></p>
     <p>êfun&emsp;<strong>lakoni³:</strong> <em>brief</em></p>
@@ -608,7 +622,7 @@ common compounds that are used in day-to-day speech.
     <p>xîmol&emsp;<strong>levi:</strong> <em>left (direction)</em></p>
     <p>botyoto&emsp;<strong>liabili:</strong> <em>responsible, liable, liability, responsibility</em></p>
     <p>fôlnî&emsp;<strong>libera¹:</strong> <em>freedom, free</em></p>
-    <p>li êo fôlnî&emsp;<strong>libera²:</strong> <em>liberate</em></p>
+    <p>xe li êo fôlnî&emsp;<strong>libera²:</strong> <em>liberate</em></p>
     <p>bôklôn&emsp;<strong>lida:</strong> <em>lead</em></p>
     <p>ônî bôklôn&emsp;<strong>lida:</strong> <em>leader</em></p>
     <p>yundôû&emsp;<strong>lida:</strong> <em>direct, guide</em></p>
@@ -616,7 +630,7 @@ common compounds that are used in day-to-day speech.
     <p>zomo zomo&emsp;<strong>liga²:</strong> <em>league</em></p>
     <p>ûnîdû&emsp;<strong>liga³:</strong> <em>link, connection</em></p>
     <p>fecko&emsp;<strong>liki¹:</strong> <em>liquid, fluid</em></p>
-    <p>dî êo fecko&emsp;<strong>liki²:</strong> <em>liquify</em></p>
+    <p>xe dî êo fecko&emsp;<strong>liki²:</strong> <em>liquify</em></p>
     <p>zomûnî&emsp;<strong>lila:</strong> <em>purple, lilac</em></p>
     <p>minyoto&emsp;<strong>limako:</strong> <em>snail, slug, a mollusk</em></p>
     <p>eloi&emsp;<strong>limi:</strong> <em>limit, limited, restriction, boundary, border</em></p>
@@ -642,7 +656,7 @@ common compounds that are used in day-to-day speech.
     <p>kîskô kon besol&emsp;<strong>loka³:</strong> <em>bolt</em></p>
     <p>yôn kon ûnîdû&emsp;<strong>loka⁴:</strong> <em>clasp</em></p>
     <p>gonzîl&emsp;<strong>loko¹:</strong> <em>crazy, mad, instance</em></p>
-    <p>dî êo gonzîl&emsp;<strong>loko²:</strong> <em>madden</em></p>
+    <p>xe dî êo gonzîl&emsp;<strong>loko²:</strong> <em>madden</em></p>
     <p>kîldo&emsp;<strong>longo:</strong> <em>long, length, longitude</em></p>
     <p>nocîdo&emsp;<strong>lose¹:</strong> <em>lose</em></p>
     <p>kon nocîdo&emsp;<strong>lose²:</strong> <em>loss</em></p>
@@ -732,7 +746,7 @@ common compounds that are used in day-to-day speech.
     <p>kon tîkû&emsp;<strong>mori¹:</strong> <em>death</em></p>
     <p>dî tîkû&emsp;<strong>mori²:</strong> <em>die</em></p>
     <p>tîkû&emsp;<strong>mori³:</strong> <em>dead</em></p>
-    <p>li êo tîkû&emsp;<strong>mori⁴:</strong> <em>kill</em></p>
+    <p>xe li êo tîkû&emsp;<strong>mori⁴:</strong> <em>kill</em></p>
     <p>lozîdô yê culono&emsp;<strong>moto:</strong> <em>motor, engine</em></p>
     <p>xe li nô&emsp;<strong>move¹:</strong> <em>move</em></p>
     <p>nô&emsp;<strong>move²:</strong> <em>movement, motion</em></p>
@@ -751,7 +765,7 @@ common compounds that are used in day-to-day speech.
     <p>kon kontol&emsp;<strong>musika²:</strong> <em>musical</em></p>
     <p>cûî&emsp;<strong>muso:</strong> <em>mouse, rat</em></p>
     <p>dî bêsu&emsp;<strong>muta¹:</strong> <em>change</em></p>
-    <p>li êo bêsu&emsp;<strong>muta²:</strong> <em>modify</em></p>
+    <p>xe li êo bêsu&emsp;<strong>muta²:</strong> <em>modify</em></p>
     <p>kon dî&emsp;<strong>muta³:</strong> <em>modification, mutation</em></p>
     <p>xe wedo woyû&emsp;<strong>nafasa:</strong> <em>breathe, breath</em></p>
     <p>bûlûsî gîto&emsp;<strong>naga:</strong> <em>snake, slither</em></p>
