add more Mini translations

--- a/docs/works/mini-words.mdx
+++ b/docs/works/mini-words.mdx
@@ -404,7 +404,11 @@ common compounds that are used in day-to-day speech.
     <p>yôn în kontol yê doî în cîhun&emsp;<strong>gitara:</strong> <em>guitar, lute, a strummed instrument</em></p>
     <p>gûmî&emsp;<strong>goma:</strong> <em>rubber, rubbery</em></p>
     <p>xifon&emsp;<strong>gomba:</strong> <em>mushroom</em></p>
-<p>TBD&emsp;<strong>gota:</strong> <em>drop, bead, blob, spot, drip</em></p>
+    <p>mîkdol cûtî yê fecko&emsp;<strong>gota¹:</strong> <em>drop</em></p>
+    <p>uyo gundolê cûtî<strong>gota²:</strong> <em>bead</em></p>
+    <p>êto yê xûnyu xîncûon&emsp;<strong>gota³:</strong> <em>blob</em></p>
+    <p>tubô&emsp;<strong>gota⁴:</strong> <em>spot</em></p>
+    <p>mîkdol cûty yê fecko et zîgîl&emsp;<strong>gota⁵:</strong> <em>drip</em></p>
     <p>kon bôklôn&emsp;<strong>gove¹:</strong> <em>government</em></p>
     <p>bôklôn&emsp;<strong>gove²:</strong> <em>govern</em></p>
     <p>xingô&emsp;<strong>gule:</strong> <em>throat, gullet</em></p>
@@ -440,7 +444,7 @@ common compounds that are used in day-to-day speech.
     <p>bukû&emsp;<strong>ise:</strong> <em>ice, freeze</em></p>
     <p>yoston&emsp;<strong>jage¹:</strong> <em>search, seek, quest</em></p>
     <p>wêtodû&emsp;<strong>jage²:</strong> <em>hunt, pursuit</em></p>
-<p>TBD&emsp;<strong>jaketa:</strong> <em>jacket, coat</em></p>
+    <p>ôntôn tetêk wokto&emsp;<strong>jaketa:</strong> <em>jacket, coat</em></p>
     <p>bêmon&emsp;<strong>janji¹:</strong> <em>promise, vow</em></p>
     <p>buswêlin&emsp;<strong>janji²:</strong> <em>pledge, swear</em></p>
     <p>dibo obokî în besol&emsp;<strong>jara¹:</strong> <em>jar</em></p>
@@ -473,11 +477,12 @@ common compounds that are used in day-to-day speech.
     <p>xokôn&emsp;<strong>kada:</strong> <em>each, respectively</em></p>
     <p>doî yê wutun ûlôgun&emsp;<strong>kadena:</strong> <em>chain, fetters</em></p>
     <p>tolxêto&emsp;<strong>kadi:</strong> <em>card, placard, cardboard, charter</em></p>
-<p>TBD&emsp;<strong>kafe:</strong> <em>coffee, cafe</em></p>
+    <p>îskô ûlzo bûlo&emsp;<strong>kafe:</strong> <em>coffee, cafe</em></p>
     <p>kûlûnun&emsp;<strong>kaje¹:</strong> <em>cage, ribcage</em></p>
     <p>ôstî tetêk&emsp;<strong>kaje²:</strong> <em>ribcage</em></p>
-<p>TBD&emsp;<strong>kakao:</strong> <em>chocolate</em></p>
-<p>TBD&emsp;<strong>kalenda:</strong> <em>calendar, schedule, timetable</em></p>
+    <p>mokon sûît bûlo yê oûdî gemolen&emsp;<strong>kakao:</strong> <em>chocolate</em></p>
+    <p>yôcno wuto&emsp;<strong>kalenda¹:</strong> <em>calendar</em></p>
+    <p>yôcno yê ôdon sîkîn&emsp;<strong>kalenda²:</strong> <em>schedule, timetable</em></p>
     <p>dî&emsp;<strong>kalite¹:</strong> <em>feature, trait</em></p>
     <p>êtsô&emsp;<strong>kalite²:</strong> <em>quality, property, -ness</em></p>
     <p>li êtsô yê&emsp;<strong>kalite³:</strong> <em>to attribute</em></p>
@@ -498,7 +503,7 @@ common compounds that are used in day-to-day speech.
     <p>êbôl&emsp;<strong>kanda¹:</strong> <em>shoulder</em></p>
     <p>bôsol êbôl cên&emsp;<strong>kanda²:</strong> <em>shrug</em></p>
     <p>kûon fûus&emsp;<strong>kandela:</strong> <em>candle</em></p>
-<p>TBD&emsp;<strong>kanela:</strong> <em>cinnamon</em></p>
+    <p>kîûngô yê lîsto cûlûl yê ocûo nomû ûlgûkîn&emsp;<strong>kanela:</strong> <em>cinnamon</em></p>
     <p>môkôfo bûndûkî&emsp;<strong>kanon:</strong> <em>cannon, artillery, gun barrel</em></p>
     <p>kistosê&emsp;<strong>kansera:</strong> <em>crab</em></p>
     <p>kontol&emsp;<strong>kanti:</strong> <em>sing, song, tune, melody</em></p>
@@ -932,12 +937,14 @@ common compounds that are used in day-to-day speech.
     <p>mîcîn&emsp;<strong>pisi:</strong> <em>fish</em></p>
     <p>zomo xîmu&emsp;<strong>pisina:</strong> <em>pool of water, pond</em></p>
     <p>zomo xîmu kon dodê&emsp;<strong>pisina:</strong> <em>swimming pool</em></p>
-<p>TBD&emsp;<strong>piti:</strong> <em>pity, mercy, compassion, sympathy, sympathize</em></p>
+    <p>kon zûtô&emsp;<strong>piti¹:</strong> <em>pity, compassion, sympathy, sympathize</em></p>
+    <p>dôkcon&emsp;<strong>piti²:</strong> <em>mercy</em></p>
     <p>towê&emsp;<strong>piuma:</strong> <em>feather</em></p>
     <p>cukto kîno&emsp;<strong>poesi:</strong> <em>poem, poetry, poetic</em></p>
     <p>zuko lîmîen yê ôntôn&emsp;<strong>poke:</strong> <em>pocket</em></p>
     <p>ônî cixîn&emsp;<strong>polisa:</strong> <em>police</em></p>
-<p>TBD&emsp;<strong>politi:</strong> <em>politics, political, politicize</em></p>
+    <p>ûlzo zomî&emsp;<strong>politi:</strong> <em>politics, political, politicize</em></p>
+    <p>xe li êo lîtiwe hôn ûlzo zomî&emsp;<strong>politi:</strong> <em>politics, political, politicize</em></p>
     <p>tîmîok hûwu&emsp;<strong>polo:</strong> <em>chicken, fowl</em></p>
     <p>kûoxi nomû&emsp;<strong>poma:</strong> <em>apple</em></p>
     <p>wêko&emsp;<strong>pone:</strong> <em>put, lay, place</em></p>
